2003-05-02	ujwal

    * Distinguising session name and windwo title. Storing window 
      separately from session name in session.

2003-05-01	fabian
    * removed scrollback settings in UI for performance reasons.
    
2003-04-29	ujwal

    * Fixed bug in storing and reading for scrollback lines preference.
    
    * default scrollback value is 1000.

2003-04-29	fabian
    * Fixed a bug in VT100Screen's removeOverLine
    * Implemented custom setting of scrollback buffer size
    * a little bit code cleanup in MainMenu and PseudoTerminal.
    
    
2003-04-29	ujwal

    * Added Applescript support for "write text <text>" 
      and "write contents of file <file>" to a session.

    * A little more code consolidation in PseudoTerminal.
    
    * Added Applescript support to select session by name:
      select session named "aName"

2003-04-28	fabian
    * Dynamically change the tab size based on the number of tabs
    * Version number updated to 0.7.0
    * Implemented "clear scrollback buffer"
    * Implemented "Save as a new entry" in Edit AddressEntry dialog
      to allow copy of existing entries.
    * Added support for CTRL-arrow keys
    
2003-04-28	ujwal

    * Massive code re-organization for revamped 
      Applescript support.
      
    * Fixed some memory related crashes when closing 
      windows created from Applescript.
      
    * Fixed bug in moving tab to new window caused by code 
      re-organization.


2003-04-27	fabian
    * Updated zh_CN and zh_TW IB files
    * Updated all string files
    
2003-04-26	ujwal

    * When changing colors, setting color scheme 
      popup button value to "Custom".
      
    * Now checking for minimum OS version on startup.
    
    * Added UI to customize color for bold output.

2003-04-25	ujwal

    * Fixed setting of tab position preference 
      in previous commit.
      
    * Fixed some quirks in color scheme selection in IB file.


2003-04-25	fabian
    * Changed the look of preference panel.